# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
page_loader/: __init__.py  cli.py  download.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
